Mon May 23 21:20:11 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/Makefile.am: add tdsproto.h to distribution

Sun May 22 08:34:41 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c reverted part of hasty fix

Sat May 21 14:10:30 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml corrected typos
	* src/dblib/bcp.c relaxed per ML from Bill Thompson today. 

Sat May 21 15:04:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: fix _bcp_get_term_var check

Fri May 20 22:56:24 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsodbc.h include/tdsproto.h:
	* src/odbc/connectparams.c src/odbc/odbc.c src/tds/login.c:
	- prepare for mars support

Fri May 20 22:53:24 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/vstrbuild.c: fix minor tds_vstrbuild issues

Thu May 19 16:56:41 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/dblib.c: support bigint on dblib

Thu May 19 11:07:35 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: use git

Mon May 16 15:28:08 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h misc/commit src/apps/tsql.c src/ctlib/blk.c:
	* src/ctlib/cs.c src/ctlib/ct.c src/ctlib/ctutil.c src/dblib/bcp.c:
	* src/dblib/dblib.c src/odbc/connectparams.c src/odbc/odbc.c:
	* src/pool/member.c src/tds/bulk.c src/tds/challenge.c:
	* src/tds/config.c src/tds/convert.c src/tds/data.c:
	* src/tds/example/token1.c src/tds/example/token2.c:
	* src/tds/gssapi.c src/tds/login.c src/tds/mem.c src/tds/net.c:
	* src/tds/numeric.c src/tds/query.c src/tds/read.c src/tds/sspi.c:
	* src/tds/token.c src/tds/unittests/common.c:
	* src/tds/unittests/dataread.c src/tds/unittests/dynamic1.c:
	* src/tds/unittests/flags.c src/tds/unittests/t0001.c:
	* src/tds/unittests/t0002.c src/tds/unittests/t0003.c:
	* src/tds/unittests/t0004.c src/tds/unittests/t0005.c: